--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  // root type html and doc type
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website</title>
-</head>
+</head1>
+</head2>
+</head3>
+</head4>
+</head5>
+</head6>
 <body>
     Harshit Varshney
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, nam commodi corrupti quos ipsam praesentium optio?
+ Magni eius ab porro quam illum officiis, necessitatibus ad eos consectetur quas unde recusandae fuga 
+ dignissimos facilis officia possimus nostrum molestias cum et animi cumque asperiores ut architecto id. Itaque unde atque nulla consequatur?
+ <img src = "image.png.png"/>
 </body>
 </html>
